// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test card example 1`] = `
"<div class=\\"app-type\\">基本使用</div>
<div class=\\"var-card\\">
  <div class=\\"var-card__floater var-elevation--2\\" style=\\"width: auto; height: auto; overflow: hidden; position: static; z-index: 2000; transition: background-color 250ms, border-radius 250ms, width 250ms, height 250ms, top 250ms, left 250ms;\\">
    <div>
      <!--v-if-->
    </div>
    <div class=\\"var-card__container\\">
      <div class=\\"var-card__title\\">风景</div>
      <!--v-if-->
      <div class=\\"var-card__description\\">公园的树林也很美。在公园的小山上栽满了树木，梧桐树的叶子随着时间的流逝慢慢变黄，纷纷飘落；枫树的叶子却变红了，公园笼罩在片片红云中，也使秋天增添了一分热情。而柏树的叶子仍是那么青翠欲滴，令你陶醉极了。山上有一群孩子在快乐的嬉戏，不时传来阵阵欢笑声，瞧，他们玩得多起劲呀，给树林增添了活力。</div>
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class=\\"var-card__holder\\" style=\\"width: auto; height: auto;\\"></div>
</div>
<div class=\\"app-type\\">显示副标题</div>
<div class=\\"var-card\\">
  <div class=\\"var-card__floater var-elevation--2\\" style=\\"width: auto; height: auto; overflow: hidden; position: static; z-index: 2000; transition: background-color 250ms, border-radius 250ms, width 250ms, height 250ms, top 250ms, left 250ms;\\">
    <div>
      <!--v-if-->
    </div>
    <div class=\\"var-card__container\\">
      <div class=\\"var-card__title\\">风景</div>
      <div class=\\"var-card__subtitle\\">公园里的风景</div>
      <div class=\\"var-card__description\\">公园的树林也很美。在公园的小山上栽满了树木，梧桐树的叶子随着时间的流逝慢慢变黄，纷纷飘落；枫树的叶子却变红了，公园笼罩在片片红云中，也使秋天增添了一分热情。而柏树的叶子仍是那么青翠欲滴，令你陶醉极了。山上有一群孩子在快乐的嬉戏，不时传来阵阵欢笑声，瞧，他们玩得多起劲呀，给树林增添了活力。</div>
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class=\\"var-card__holder\\" style=\\"width: auto; height: auto;\\"></div>
</div>
<div class=\\"app-type\\">显示图片</div>
<div class=\\"var-card\\">
  <div class=\\"var-card__floater var-elevation--2\\" style=\\"width: auto; height: auto; overflow: hidden; position: static; z-index: 2000; transition: background-color 250ms, border-radius 250ms, width 250ms, height 250ms, top 250ms, left 250ms;\\">
    <div><img class=\\"var-card__image-column\\" style=\\"object-fit: cover;\\" src=\\"https://varlet-varletjs.vercel.app/cat.jpg\\"></div>
    <div class=\\"var-card__container\\">
      <div class=\\"var-card__title\\">风景</div>
      <div class=\\"var-card__subtitle\\">公园里的风景</div>
      <div class=\\"var-card__description\\">公园的树林也很美。在公园的小山上栽满了树木，梧桐树的叶子随着时间的流逝慢慢变黄，纷纷飘落；枫树的叶子却变红了，公园笼罩在片片红云中，也使秋天增添了一分热情。而柏树的叶子仍是那么青翠欲滴，令你陶醉极了。山上有一群孩子在快乐的嬉戏，不时传来阵阵欢笑声，瞧，他们玩得多起劲呀，给树林增添了活力。</div>
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class=\\"var-card__holder\\" style=\\"width: auto; height: auto;\\"></div>
</div>
<div class=\\"app-type\\">横向显示</div>
<div class=\\"var-card\\">
  <div class=\\"var-card__floater var-elevation--2 var-card--layout-row\\" style=\\"width: auto; height: auto; overflow: hidden; position: static; z-index: 2000; transition: background-color 250ms, border-radius 250ms, width 250ms, height 250ms, top 250ms, left 250ms;\\">
    <div><img class=\\"var-card__image-row\\" style=\\"object-fit: cover;\\" src=\\"https://varlet-varletjs.vercel.app/cat.jpg\\"></div>
    <div class=\\"var-card__container\\">
      <div class=\\"var-card__title\\">风景</div>
      <div class=\\"var-card__subtitle\\">公园里的风景</div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class=\\"var-card__holder\\" style=\\"width: auto; height: auto;\\"></div>
</div>
<div class=\\"app-type\\">使用插槽</div>
<div class=\\"var-card\\">
  <div class=\\"var-card__floater var-elevation--2\\" style=\\"width: auto; height: auto; overflow: hidden; position: static; z-index: 2000; transition: background-color 250ms, border-radius 250ms, width 250ms, height 250ms, top 250ms, left 250ms;\\">
    <div><img class=\\"var-card__image-column\\" style=\\"object-fit: cover;\\" src=\\"https://varlet-varletjs.vercel.app/cat.jpg\\"></div>
    <div class=\\"var-card__container\\">
      <div class=\\"var-card__title\\">风景</div>
      <div class=\\"var-card__subtitle\\">公园里的风景</div>
      <div class=\\"var-card__description\\">公园的树林也很美。在公园的小山上栽满了树木，梧桐树的叶子随着时间的流逝慢慢变黄，纷纷飘落；枫树的叶子却变红了，公园笼罩在片片红云中，也使秋天增添了一分热情。而柏树的叶子仍是那么青翠欲滴，令你陶醉极了。山上有一群孩子在快乐的嬉戏，不时传来阵阵欢笑声，瞧，他们玩得多起劲呀，给树林增添了活力。</div>
      <div class=\\"var-card__footer\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--primary var-elevation--2\\" style=\\"margin-right: 10px;\\">
          <!--v-if-->
          <div class=\\"var-button__content\\">添加按钮</div>
        </button><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--warning var-elevation--2\\">
          <!--v-if-->
          <div class=\\"var-button__content\\">添加按钮</div>
        </button></div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class=\\"var-card__holder\\" style=\\"width: auto; height: auto;\\"></div>
</div>
<div class=\\"app-type\\">水波效果</div>
<div class=\\"var-card\\">
  <div class=\\"var-card__floater var-elevation--2\\" style=\\"width: auto; height: auto; overflow: hidden; position: static; z-index: 2000; transition: background-color 250ms, border-radius 250ms, width 250ms, height 250ms, top 250ms, left 250ms;\\">
    <div>
      <!--v-if-->
    </div>
    <div class=\\"var-card__container\\">
      <div class=\\"var-card__title\\">风景</div>
      <div class=\\"var-card__subtitle\\">公园里的风景</div>
      <div class=\\"var-card__description\\">公园的树林也很美。在公园的小山上栽满了树木，梧桐树的叶子随着时间的流逝慢慢变黄，纷纷飘落；枫树的叶子却变红了，公园笼罩在片片红云中，也使秋天增添了一分热情。而柏树的叶子仍是那么青翠欲滴，令你陶醉极了。山上有一群孩子在快乐的嬉戏，不时传来阵阵欢笑声，瞧，他们玩得多起劲呀，给树林增添了活力。</div>
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class=\\"var-card__holder\\" style=\\"width: auto; height: auto;\\"></div>
</div>
<div class=\\"app-type\\">全屏显示</div>
<div class=\\"var-card\\">
  <div class=\\"var-card__floater var-elevation--2\\" style=\\"width: auto; height: auto; overflow: hidden; position: static; z-index: 2000; transition: background-color 250ms, border-radius 250ms, width 250ms, height 250ms, top 250ms, left 250ms;\\">
    <div><img class=\\"var-card__image-column\\" style=\\"object-fit: cover;\\" src=\\"https://varlet-varletjs.vercel.app/cat.jpg\\"></div>
    <div class=\\"var-card__container\\">
      <div class=\\"var-card__title\\">风景</div>
      <div class=\\"var-card__subtitle\\">公园里的风景</div>
      <!--v-if-->
      <div class=\\"var-card__footer\\"><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-info var-button--text\\" style=\\"margin-right: 10px;\\">
          <!--v-if-->
          <div class=\\"var-button__content\\">添加按钮</div>
        </button><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--text-info var-button--text\\">
          <!--v-if-->
          <div class=\\"var-button__content\\">添加按钮</div>
        </button></div>
    </div>
    <div class=\\"var-card__content\\" style=\\"height: 0px; opacity: 0; transition: opacity 375ms;\\">
      <p style=\\"padding: 0px 14px;\\">公园的树林也很美。在公园的小山上栽满了树木，梧桐树的叶子随着时间的流逝慢慢变黄，纷纷飘落；枫树的叶子却变红了，公园笼罩在片片红云中，也使秋天增添了一分热情。而柏树的叶子仍是那么青翠欲滴，令你陶醉极了。山上有一群孩子在快乐的嬉戏，不时传来阵阵欢笑声，瞧，他们玩得多起劲呀，给树林增添了活力。</p>
    </div>
    <!--v-if-->
  </div>
  <div class=\\"var-card__holder\\" style=\\"width: auto; height: auto;\\"></div>
</div>"
`;

exports[`test card floating 1`] = `
"<div class=\\"var-card\\">
  <div class=\\"var-card__floater var-elevation--2\\" style=\\"width: auto; height: auto; overflow: hidden; position: static; z-index: 2000; transition: background-color 250ms, border-radius 250ms, width 250ms, height 250ms, top 250ms, left 250ms;\\">
    <div><img class=\\"var-card__image-column\\" style=\\"object-fit: cover;\\" src=\\"https://varlet-varletjs.vercel.app/cat.jpg\\"></div>
    <div class=\\"var-card__container\\">
      <div class=\\"var-card__title\\">Title</div>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class=\\"var-card__content\\" style=\\"height: 0px; opacity: 0; transition: opacity 375ms;\\">Content</div>
    <!--v-if-->
  </div>
  <div class=\\"var-card__holder\\" style=\\"width: auto; height: auto;\\"></div>
</div>"
`;

exports[`test card floating 2`] = `
"<div class=\\"var-card\\">
  <div class=\\"var-card__floater var-elevation--2 var-card--layout-row\\" style=\\"width: auto; height: auto; overflow: hidden; position: static; z-index: 2003; transition: background-color 250ms, border-radius 250ms, width 250ms, height 250ms, top 250ms, left 250ms; top: 0px; left: 0px; border-radius: 0px;\\">
    <div><img class=\\"var-card__image-row\\" style=\\"object-fit: cover;\\" src=\\"https://varlet-varletjs.vercel.app/cat.jpg\\"></div>
    <div class=\\"var-card__container\\">
      <div class=\\"var-card__title\\">Title</div>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class=\\"var-card__holder\\" style=\\"width: auto; height: auto;\\"></div>
</div>"
`;

exports[`test card layout 1`] = `
"<div class=\\"var-card\\">
  <div class=\\"var-card__floater var-elevation--2 var-card--layout-row\\" style=\\"width: auto; height: auto; overflow: hidden; position: static; z-index: 2000; transition: background-color 250ms, border-radius 250ms, width 250ms, height 250ms, top 250ms, left 250ms;\\">
    <div><img class=\\"var-card__image-row\\" style=\\"object-fit: cover;\\" src=\\"https://varlet-varletjs.vercel.app/cat.jpg\\"></div>
    <div class=\\"var-card__container\\">
      <div class=\\"var-card__title\\">This is Card</div>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class=\\"var-card__holder\\" style=\\"width: auto; height: auto;\\"></div>
</div>"
`;

exports[`test card layout 2`] = `
"<div class=\\"var-card\\">
  <div class=\\"var-card__floater var-elevation--2\\" style=\\"width: auto; height: auto; overflow: hidden; position: static; z-index: 2000; transition: background-color 250ms, border-radius 250ms, width 250ms, height 250ms, top 250ms, left 250ms;\\">
    <div><img class=\\"var-card__image-column\\" style=\\"object-fit: cover;\\" src=\\"https://varlet-varletjs.vercel.app/cat.jpg\\"></div>
    <div class=\\"var-card__container\\">
      <div class=\\"var-card__title\\">This is Card</div>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class=\\"var-card__holder\\" style=\\"width: auto; height: auto;\\"></div>
</div>"
`;

exports[`test card props 1`] = `
"<div class=\\"var-card\\">
  <div class=\\"var-card__floater var-elevation--2\\" style=\\"width: auto; height: auto; overflow: hidden; position: static; z-index: 2000; transition: background-color 250ms, border-radius 250ms, width 250ms, height 250ms, top 250ms, left 250ms;\\">
    <div><img class=\\"var-card__image-column\\" style=\\"object-fit: cover; height: 200px; width: 200px;\\" src=\\"https://varlet-varletjs.vercel.app/cat.jpg\\" alt=\\"This is an image\\"></div>
    <div class=\\"var-card__container\\">
      <div class=\\"var-card__title\\">This is Card</div>
      <div class=\\"var-card__subtitle\\">This is subtitle</div>
      <div class=\\"var-card__description\\">This is description</div>
      <div class=\\"var-card__footer\\">text</div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class=\\"var-card__holder\\" style=\\"width: auto; height: auto;\\"></div>
</div>"
`;
